--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <div class="o-grid__box o-grid__box--quarter o-grid__box--third@medium is-hidden@tiny is-hidden@small">
                     <h1 class="c-map-header__title">Campus map</h1>
                 </div>
-                <div class="o-grid__box  o-grid__box--half o-grid__box--third@medium  o-grid__box--half@small o-grid__box--twothirds@tiny">
+                <div class="o-grid__box  o-grid__box--half o-grid__box--third@medium  o-grid__box--twothirds@small o-grid__box--twothirds@tiny">
                     <form action="#" method="get" class="c-form" id="map-search-form">
                         <fieldset>
                           <div class="c-form__element">
@@ -56,7 +56,7 @@
                         </fieldset>
                     </form>
                 </div>
-            <div class="o-grid__box o-grid__box--quarter o-grid__box--third@medium  o-grid__box--half@small o-grid__box--third@tiny">
+            <div class="o-grid__box o-grid__box--quarter o-grid__box--third@medium  o-grid__box--third@small o-grid__box--third@tiny">
                  <a href="https://www.york.ac.uk/"><img class="c-main-header__logo" src="https://www.york.ac.uk/static/1.4/img/logo-white.svg" alt="University of York"></a>
             </div>
         </div>
