fixed reset map button

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <div id="control-div" class="control-div">
          <div id= "control-ui" class="control-ui" title = "Click to reset the map">
            <div id="control-text" class="control-text">
-             <p> <span class="is-hidden@small-">Reset Map </span> <i class="c-icon c-icon--lg c-icon--refresh"></i> </p>
+             <p> <span class="is-hidden@small is-hidden@medium-">Reset Map </span> <i class="c-icon c-icon--lg c-icon--refresh"></i> </p>
            </div>
          </div>
     </div>
