Changed cash points to cash machines

--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
                 <label for="car-parks" class="c-btn  c-btn--secondary c-btn--medium c-btn--selectable__label" role="button"><i class="c-icon c-icon--above c-icon--car"></i>Car parks</label>
                 <input type="checkbox" id="bus-stops" name="mapButton" class="c-btn--selectable" value="Bus stops">
                 <label for="bus-stops" class="c-btn  c-btn--secondary c-btn--medium c-btn--selectable__label" role="button"><i class="c-icon c-icon--above c-icon--bus"></i>Bus stops</label>
-                <input type="checkbox" id="cash-points" name="mapButton" class="c-btn--selectable" value="Cash points">
-                <label for="cash-points" class="c-btn  c-btn--secondary c-btn--medium c-btn--selectable__label" role="button"><i class="c-icon c-icon--above c-icon--money"></i>Cash points</label>
+                <input type="checkbox" id="cash-machines" name="mapButton" class="c-btn--selectable" value="Cash machines">
+                <label for="cash-machines" class="c-btn  c-btn--secondary c-btn--medium c-btn--selectable__label" role="button"><i class="c-icon c-icon--above c-icon--money"></i>Cash machines</label>
                 <input type="checkbox" id="post-boxes" name="mapButton" class="c-btn--selectable" value="Post boxes">
                 <label for="post-boxes" class="c-btn  c-btn--secondary c-btn--medium c-btn--selectable__label" role="button"><i class="c-icon c-icon--above c-icon--envelope"></i>Post boxes</label>
             </div>
