Added utility nav

--- a/index.html
+++ b/index.html
@@ -43,6 +43,13 @@
         <div class="o-grid__row">
                 <div class="o-grid__box o-grid__box--quarter o-grid__box--third@medium is-hidden@tiny is-hidden@small">
                     <h1 class="c-map-header__title">Campus map</h1>
+                      <nav class="c-utility-nav js-accessible-nav" role="navigation" aria-label="Utility navigation">
+                        <ul class="c-utility-nav__list" role="menubar" aria-hidden="false">
+                          <li class="c-utility-nav__item" role="menuitem" aria-haspopup="false"><a class="c-utility-nav__link" href="#">Getting here</a></li>
+                          <li class="c-utility-nav__item" role="menuitem" aria-haspopup="false"><a class="c-utility-nav__link" href="#">Study</a></li>
+                          <li class="c-utility-nav__item" role="menuitem" aria-haspopup="false"><a class="c-utility-nav__link" href="#">Contact us</a></li>
+                        </ul>
+                      </nav>
                 </div>
                 <div class="o-grid__box  o-grid__box--half o-grid__box--third@medium  o-grid__box--twothirds@small o-grid__box--twothirds@tiny">
                     <form action="#" method="get" class="c-form" id="map-search-form">
