Made closeInfoPanel absolutely positioned

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     </div>
 </div>
 <div class="infoPanel">
-    <a href="#" style="float:right;" class="closeInfoPanel"><i class="c-icon c-icon--close"></i></a>
+    <a href="#" class="closeInfoPanel"><i class="c-icon c-icon--close"></i></a>
     <div class="infoPanel__content"></div>
 </div>
 
