Fixed drawer click event

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
 <footer class="footer">
     <div class="bar">
-        <a href="#" id="drawerStatusButton" ><i class="c-icon c-icon--above c-icon--chevron-up"></i>open</a>
+        <a href="#" id="drawerStatusButton" ><i class="c-icon c-icon--above c-icon--chevron-up"></i>Find Facilities</a>
     </div>
     <div class="o-wrapper o-wrapper--wide o-grid panel">
       <div class="o-grid__row">
