--- a/index.html
+++ b/index.html
@@ -72,13 +72,24 @@
 
 <div id="mapContainer" class="c-map-container">
     <div id="map" class="map"></div>
-    <div id="control-div" class="control-div">
-         <div id= "control-ui" class="control-ui" title = "Click to reset the map">
-           <div id="control-text" class="control-text">
-             <p> <span class="is-hidden@small is-hidden@medium-">Reset Map </span> <i class="c-icon c-icon--lg c-icon--refresh"></i> </p>
-           </div>
-         </div>
+    <div id="mapContainer" class="c-map-container">
+        <div id="map" class="map"></div>
+        <div id="control-reset-div" class="control-div">
+             <div id= "control-reset-ui" class="control-ui" title = "Click to reset the map">
+               <div id="control-reset-text" class="control-text">
+                 <p> <span class="is-hidden@small is-hidden@medium-">Reset Map </span> <i class="c-icon c-icon--lg c-icon--refresh"></i> </p>
+               </div>
+             </div>
+        </div>
+        <div id="control-feedback-div" class="control-div">
+             <div id= "control-feedback-ui" class="control-ui control-ui--feedback" title = "Click to send feedback">
+               <div id="control-feedback-text" class="control-text">
+                 <p> <span class="is-hidden@small is-hidden@medium-">Feedback </span> <i class="c-icon c-icon--lg c-icon--commenting-o"></i> </p>
+               </div>
+             </div>
+        </div>
     </div>
+
 </div>
 <div class="infoPanel">
     <a href="#" class="closeInfoPanel"><i class="c-icon c-icon--close"></i></a>
