--- a/index.html
+++ b/index.html
@@ -82,9 +82,12 @@
              </div>
         </div>
         <div id="control-feedback-div" class="control-div">
-             <div id= "control-feedback-ui" class="control-ui control-ui--feedback" title = "Click to send feedback">
+             <div id= "control-feedback-ui" class="control-ui--feedback" title = "Click to send feedback">
                <div id="control-feedback-text" class="control-text">
-                 <p> <span class="is-hidden@small is-hidden@medium-">Feedback </span> <i class="c-icon c-icon--lg c-icon--commenting-o"></i> </p>
+                 <!-- <p> <span class="is-hidden@small is-hidden@medium-">Feedback </span> <i class="c-icon c-icon--lg c-icon--commenting-o"></i> </p> -->
+                 <p>
+                     <span class="is-hidden@small is-hidden@medium-">Send us feedback</span> <span class="is-hidden@small is-visible@medium-">Feedback</span>
+                 </p>
                </div>
              </div>
         </div>
