added links to header navigation

--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
                     <h1 class="c-map-header__title">Campus map</h1>
                       <nav class="c-utility-nav js-accessible-nav" role="navigation" aria-label="Utility navigation">
                         <ul class="c-utility-nav__list" role="menubar" aria-hidden="false">
-                          <li class="c-utility-nav__item" role="menuitem" aria-haspopup="false"><a class="c-utility-nav__link" href="#">Getting here</a></li>
-                          <li class="c-utility-nav__item" role="menuitem" aria-haspopup="false"><a class="c-utility-nav__link" href="#">Study</a></li>
-                          <li class="c-utility-nav__item" role="menuitem" aria-haspopup="false"><a class="c-utility-nav__link" href="#">Contact us</a></li>
+                          <li class="c-utility-nav__item" role="menuitem" aria-haspopup="false"><a class="c-utility-nav__link" href="https://www.york.ac.uk/about/maps/">Getting here</a></li>
+                          <li class="c-utility-nav__item" role="menuitem" aria-haspopup="false"><a class="c-utility-nav__link" href="https://www.york.ac.uk/study/">Study</a></li>
+                          <li class="c-utility-nav__item" role="menuitem" aria-haspopup="false"><a class="c-utility-nav__link" href="https://www.york.ac.uk/about/contact/">Contact us</a></li>
                         </ul>
                       </nav>
                 </div>
