Improved the height of map between header and footer

--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
 
 <a href="#Main-Content" class="o-skip-link">Skip to content</a>
 
+
+<div class="wrapper">
+
+
 <header class="c-map-header" role="banner">
     <div class="o-wrapper o-wrapper--wide o-grid">
         <div class="o-grid__row">
@@ -70,29 +74,25 @@
     </div>
 </header>
 
-<div id="mapContainer" class="c-map-container">
+<!-- <div id="mapContainer" class="c-map-container"> -->
     <div id="map" class="map"></div>
-
-        <div id="control-reset-div" class="control-div">
-             <div id= "control-reset-ui" class="control-ui" title = "Click to reset the map">
-               <div id="control-reset-text" class="control-text">
-                 <p> <span class="is-hidden@small is-hidden@medium-">Reset Map </span> <i class="c-icon c-icon--lg c-icon--refresh"></i> </p>
-               </div>
-             </div>
-        </div>
-        <div id="control-feedback-div" class="control-div">
-             <div id= "control-feedback-ui" class="control-ui--feedback" title = "Click to send feedback">
-               <div id="control-feedback-text" class="control-text">
-                 <!-- <p> <span class="is-hidden@small is-hidden@medium-">Feedback </span> <i class="c-icon c-icon--lg c-icon--commenting-o"></i> </p> -->
-                 <p>
-                     <span class="is-hidden@small is-hidden@medium-">Send us feedback</span> <span class="is-hidden@small is-visible@medium-">Feedback</span>
-                 </p>
-               </div>
-             </div>
-        </div>
-
-
-</div>
+    <div id="control-reset-div" class="control-div">
+         <div id= "control-reset-ui" class="control-ui" title = "Click to reset the map">
+           <div id="control-reset-text" class="control-text">
+             <p> <span class="is-hidden@small is-hidden@medium-">Reset Map </span> <i class="c-icon c-icon--lg c-icon--refresh"></i> </p>
+           </div>
+         </div>
+    </div>
+    <div id="control-feedback-div" class="control-div">
+         <div id= "control-feedback-ui" class="control-ui--feedback" title = "Click to send feedback">
+           <div id="control-feedback-text" class="control-text">
+             <p>
+                 <span class="is-hidden@small is-hidden@medium-">Send us feedback</span> <span class="is-hidden@small is-visible@medium-">Feedback</span>
+             </p>
+           </div>
+         </div>
+    </div>
+<!-- </div> -->
 <div class="infoPanel">
     <a href="#" class="closeInfoPanel"><i class="c-icon c-icon--close"></i></a>
     <div class="infoPanel__content"></div>
@@ -128,6 +128,7 @@
     </div>
 </footer>
 
+</div>
 
 </body>
 </html>
