changes search input style and placeholder text, changed feedback, updated title position

--- a/index.html
+++ b/index.html
@@ -59,8 +59,9 @@
                     <form action="#" method="get" class="c-form" id="map-search-form">
                         <fieldset>
                           <div class="c-form__element">
-                            <input class="c-form__input c-form__input--text" type="search" id="map-search-query" name="search-query" placeholder="Enter your search" autocomplete="off"/></a>
-                            <div class="c-autocomplete">
+                              <i class="c-icon c-icon--search"></i>
+                              <input class="c-form__input c-form__input--text"  type="search" id="map-search-query" name="search-query" autocomplete="off"/>
+                             <div class="c-autocomplete">
                               <ul class="c-autocomplete__list">
                               </ul>
                             </div>
@@ -87,7 +88,7 @@
          <div id= "control-feedback-ui" class="control-ui--feedback" title = "Click to send feedback">
            <div id="control-feedback-text" class="control-text">
              <p>
-                 <span class="is-hidden@small is-hidden@medium-">Send us feedback</span> <span class="is-hidden@small is-visible@medium-">Feedback</span>
+                 <span class="is-hidden@small is-hidden@medium-">Report a problem</span> <span class="is-hidden@small is-visible@medium-">Feedback</span>
              </p>
            </div>
          </div>
