--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     </div>
 </header>
 
-<!-- <div id="mapContainer" class="c-map-container"> -->
+
     <div id="map" class="map"></div>
     <div id="control-reset-div" class="control-div">
          <div id= "control-reset-ui" class="control-ui" title = "Click to reset the map">
@@ -84,6 +84,9 @@
            </div>
          </div>
     </div>
+
+
+
     <div id="control-feedback-div" class="control-div">
          <div id= "control-feedback-ui" class="control-ui--feedback" title = "Click to send feedback">
            <div id="control-feedback-text" class="control-text">
@@ -93,7 +96,26 @@
            </div>
          </div>
     </div>
-<!-- </div> -->
+
+
+        <div id="control-campus-div" class="control-div">
+             <div id= "control-east-ui" class="control-ui" title = "Click to recentre the map">
+               <div id="control-east-text" class="control-text">
+                 <p> <span class="is-hidden@small is-hidden@medium-">East</span></p>
+               </div>
+             </div>
+             <div id= "control-west-ui" class="control-ui" title = "Click to recentre the map">
+               <div id="control-west-text" class="control-text">
+                 <p> <span class="is-hidden@small is-hidden@medium-">West</span></p>
+               </div>
+             </div>
+             <div id= "control-km-ui" class="control-ui" title = "Click to recentre the map">
+               <div id="control-km-text" class="control-text">
+                 <p> <span class="is-hidden@small is-hidden@medium-">Kings Manor</span></p>
+               </div>
+             </div>
+        </div>
+
 <div class="infoPanel">
     <a href="#" class="closeInfoPanel"><i class="c-icon c-icon--close"></i></a>
     <div class="infoPanel__content"></div>
