--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@
 
 
     <div id="map" class="map"></div>
-    <div id="control-reset-div" class="control-div">
+    <!-- <div id="control-reset-div" class="control-div">
          <div id= "control-reset-ui" class="control-ui" title = "Click to reset the map">
            <div id="control-reset-text" class="control-text">
-             <p> <span class="is-hidden@small is-hidden@medium-">Reset Map </span> <i class="c-icon c-icon--lg c-icon--refresh"></i> </p>
+             <p> <span class="is-hidden@small is-hidden@medium-">Reset map </span> <i class="c-icon c-icon--lg c-icon--refresh"></i> </p>
            </div>
          </div>
-    </div>
+    </div> -->
 
 
 
@@ -99,20 +99,35 @@
 
 
         <div id="control-campus-div" class="control-div">
+
+
+            <div id="control-reset-ui" class="control-ui" title = "Click to reset the map">
+              <div id="control-reset-text" class="control-text">
+                <p> <span class="is-hidden@small is-hidden@medium-">Reset map </span> <i class="c-icon c-icon--lg c-icon--refresh"></i> </p>
+              </div>
+            </div>
+            <div class="control-campus-div--campus-buttons">
+
+
+            <p>
+                Centre the map on
+            </p>
              <div id= "control-east-ui" class="control-ui" title = "Click to recentre the map">
                <div id="control-east-text" class="control-text">
-                 <p> <span class="is-hidden@small is-hidden@medium-">East</span></p>
+                Campus East
                </div>
              </div>
              <div id= "control-west-ui" class="control-ui" title = "Click to recentre the map">
                <div id="control-west-text" class="control-text">
-                 <p> <span class="is-hidden@small is-hidden@medium-">West</span></p>
+                 Campus West
                </div>
              </div>
              <div id= "control-km-ui" class="control-ui" title = "Click to recentre the map">
                <div id="control-km-text" class="control-text">
-                 <p> <span class="is-hidden@small is-hidden@medium-">Kings Manor</span></p>
+                 King's Manor
                </div>
+             </div>
+
              </div>
         </div>
 
@@ -123,7 +138,7 @@
 
 <footer class="footer">
     <div class="bar">
-        <a href="#" id="drawerStatusButton" ><i class="c-icon c-icon--above c-icon--chevron-up"></i>Find Facilities</a>
+        <a href="#" id="drawerStatusButton" ><i class="c-icon c-icon--above c-icon--chevron-up"></i>Find facilities</a>
     </div>
     <div class="o-wrapper o-wrapper--wide o-grid panel">
       <div class="o-grid__row">
