Improve title for map centre buttons

--- a/index.html
+++ b/index.html
@@ -112,17 +112,17 @@
             <p>
                 Centre the map on
             </p>
-             <div id= "control-east-ui" class="control-ui" title = "Click to recentre the map">
+             <div id= "control-east-ui" class="control-ui" title = "Centre on Campus West">
                <div id="control-east-text" class="control-text">
                 Campus East
                </div>
              </div>
-             <div id= "control-west-ui" class="control-ui" title = "Click to recentre the map">
+             <div id= "control-west-ui" class="control-ui" title = "Centre on Campus East">
                <div id="control-west-text" class="control-text">
                  Campus West
                </div>
              </div>
-             <div id= "control-km-ui" class="control-ui" title = "Click to recentre the map">
+             <div id= "control-km-ui" class="control-ui" title = "Centre on King's Manor">
                <div id="control-km-text" class="control-text">
                  King's Manor
                </div>
