Fixed missing refresh button on mobile and issue with button text on tablet

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
             <div id="control-reset-ui" class="control-ui" title = "Click to reset the map">
               <div id="control-reset-text" class="control-text">
-                <p> <span class="is-hidden@small is-hidden@medium-">Reset map </span> <i class="c-icon c-icon--lg c-icon--refresh"></i> </p>
+                <p> <span class="is-hidden@small is-hidden@medium- ipad-fix">Reset map </span> <i class="c-icon c-icon--lg c-icon--refresh"></i> </p>
               </div>
             </div>
             <div class="control-campus-div--campus-buttons">
