Commented out Printers tab until correct printer XML can be loaded to Funnelback

--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
                 <label for="food-and-drink" class="c-btn  c-btn--secondary c-btn--medium c-btn--selectable__label" role="button"><i class="c-icon c-icon--above c-icon--coffee"></i>Food and drink</label>
                 <input type="checkbox" id="study-spaces" name="mapButton" class="c-btn--selectable" value="Study spaces">
                 <label for="study-spaces" class="c-btn  c-btn--secondary c-btn--medium c-btn--selectable__label" role="button"><i class="c-icon c-icon--above c-icon--book"></i>Study spaces</label>
-                <input type="checkbox" id="printers" name="mapButton" class="c-btn--selectable" value="Printers">
-                <label for="printers" class="c-btn  c-btn--secondary c-btn--medium c-btn--selectable__label" role="button"><i class="c-icon c-icon--above c-icon--print"></i>Printers</label>
+                <!--<input type="checkbox" id="printers" name="mapButton" class="c-btn--selectable" value="Printers">
+                <label for="printers" class="c-btn  c-btn--secondary c-btn--medium c-btn--selectable__label" role="button"><i class="c-icon c-icon--above c-icon--print"></i>Printers</label>-->
                 <input type="checkbox" id="shops" name="mapButton" class="c-btn--selectable" value="Shops">
                 <label for="shops" class="c-btn  c-btn--secondary c-btn--medium c-btn--selectable__label" role="button"><i class="c-icon c-icon--above c-icon--shopping-basket"></i>Shops</label>
                 <input type="checkbox" id="car-parks" name="mapButton" class="c-btn--selectable" value="Car parks">
