--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="shortcut icon" href="https://www.york.ac.uk/static/1.5/img/favicon.ico">
     <link rel="icon" type="image/x-icon" href="https://www.york.ac.uk/static/1.5/img/favicon.ico">
 
-    <link rel="stylesheet" href="css/styles.min.css">
+    <link rel="stylesheet" href="https://www.york.ac.uk/static/1.5/css/styles.min.css">
     <link rel="stylesheet" href="css/snazzy-info-window.css">
     <link rel="stylesheet" href="css/map.css">
 
@@ -68,7 +68,7 @@
                     </form>
                 </div>
             <div class="o-grid__box o-grid__box--quarter o-grid__box--third@medium  o-grid__box--third@small o-grid__box--third@tiny">
-                 <a href="https://www.york.ac.uk/"><img class="c-main-header__logo" src="https://www.york.ac.uk/static/1.4/img/logo-white.svg" alt="University of York"></a>
+                 <a href="https://www.york.ac.uk/"><img class="c-main-header__logo" src="https://www.york.ac.uk/static/1.5/img/logo-white.svg" alt="University of York"></a>
             </div>
         </div>
     </div>
