--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
 
     <div id="map" class="map"></div>
     <div id="control-feedback-div" class="control-div">
-         <div id= "control-feedback-ui" class="control-ui--feedback" title = "Click to report a problem">
+         <div id= "control-feedback-ui" class="control-ui--feedback" title = "Click to send feedback">
            <div id="control-feedback-text" class="control-text">
              <p>
-                 <span class="is-hidden@small is-hidden@medium-">Report a problem</span> <span class="is-hidden@small is-visible@medium-">Feedback</span>
+                Feedback
              </p>
            </div>
          </div>
