--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <h1 class="c-map-header__title">Campus map</h1>
                       <nav class="c-utility-nav js-accessible-nav" role="navigation" aria-label="Utility navigation">
                         <ul class="c-utility-nav__list" role="menubar" aria-hidden="false">
-                          <li class="c-utility-nav__item" role="menuitem" aria-haspopup="false"><a class="c-utility-nav__link" href="https://www.york.ac.uk/about/maps/">Maps and directions</a></li>
+                          <li class="c-utility-nav__item" role="menuitem" aria-haspopup="false"><a class="c-utility-nav__link" href="https://www.york.ac.uk/about/maps/"><u>Maps and directions</u></a></li>
 
                         </ul>
                       </nav>
@@ -76,7 +76,7 @@
 
 
     <div id="map" class="map"></div>
-    <div id="control-feedback-div" class="control-div">
+    <div id="control-feedback-div" class="control-div control-div-feedback">
          <div id= "control-feedback-ui" class="control-ui--feedback" title = "Click to send feedback">
            <div id="control-feedback-text" class="control-text">
              <p>
@@ -85,7 +85,7 @@
            </div>
          </div>
     </div>
-    <div id="control-campus-div" class="control-div">
+    <div id="control-campus-div" class="control-div control-div-centre">
             <div id="control-reset-ui" class="control-ui" title = "Click to reset the map">
               <div id="control-reset-text" class="control-text">
                 <p> <span class="is-hidden@small is-hidden@medium- ipad-fix">Reset map </span> <i class="c-icon c-icon--lg c-icon--refresh"></i> </p>
