Most events added - Streetview and generic Click remaining

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <h1 class="c-map-header__title">Campus map</h1>
                       <nav class="c-utility-nav js-accessible-nav" role="navigation" aria-label="Utility navigation">
                         <ul class="c-utility-nav__list" role="menubar" aria-hidden="false">
-                          <li class="c-utility-nav__item" role="menuitem" aria-haspopup="false"><a class="c-utility-nav__link" href="https://www.york.ac.uk/about/maps/">Maps and directions</a></li>
+                          <li class="c-utility-nav__item" role="menuitem" aria-haspopup="false"><a class="c-utility-nav__link" href="https://www.york.ac.uk/about/maps/"><u>Maps and directions</u></a></li>
 
                         </ul>
                       </nav>
